# nanvom-desktop

./: .gitignore  CODEOWNERS  README.md  package.json  pnpm-lock.yaml
.github/workflows/: lint.yml  pull-request.yml  python-sdk-tests.yml  release.yml
.github/workflows-disabled/: js-sdk-tests.yml  publish_packages.yml  template.yml
examples/basic-javascript/: .env.example  README.md  index.js  package-lock.json  package.json
examples/basic-python/: .env.example  README.md  main.py  pyproject.toml
examples/streaming-apps-javascript/: README.md
examples/streaming-apps-python/: README.md
sdk-reference/desktop-python-sdk/v1.0.3/sandbox/: page.mdx
sdk-reference/desktop-python-sdk/v1.3.0/sandbox/: page.mdx
sdk-reference/desktop-python-sdk/v1.5.0/sandbox/: page.mdx
sdk-reference/desktop-python-sdk/v1.6.0/sandbox/: page.mdx
sdk-reference/desktop-python-sdk/v1.6.3/sandbox/: page.mdx
sdk-reference/desktop-python-sdk/v1.6.4/sandbox/: page.mdx
sdk-reference/desktop-python-sdk/v1.7.1/sandbox/: page.mdx
sdk-reference/desktop-python-sdk/v1.7.2/sandbox/: page.mdx
template/: Dockerfile  nanovm.Dockerfile  nanovm.toml
